--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -1195,6 +1195,7 @@ bg:
     hero:
       search: ~
       signup: ~
+      search_placeholder: ~
   layouts:
     admin:
       admin: "%{service_name} администраторски панел"
