--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -1197,6 +1197,7 @@ ca:
     hero:
       search: ~
       signup: ~
+      search_placeholder: ~
   layouts:
     admin:
       admin: "Panell d'administració de %{service_name}"
