--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -1235,6 +1235,7 @@ cs:
     hero:
       search: ~
       signup: ~
+      search_placeholder: ~
   layouts:
     admin:
       admin: "Pomozte nám rozšířit %{service_name}"
