--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1226,6 +1226,7 @@ de:
     hero:
       search: Suchen
       signup: Registrieren
+      search_placeholder: ~
   layouts:
     admin:
       admin: "%{service_name} Verwaltung"
