--- a/config/locales/fr-CA.yml
+++ b/config/locales/fr-CA.yml
@@ -1214,6 +1214,7 @@ fr-CA:
     hero:
       search: ~
       signup: ~
+      search_placeholder: ~
   layouts:
     admin:
       admin: "Panneau d'administration %{service_name}"
