--- a/config/locales/nb.yml
+++ b/config/locales/nb.yml
@@ -1228,6 +1228,7 @@ nb:
     hero:
       search: Søk
       signup: "Registrer deg"
+      search_placeholder: ~
   layouts:
     admin:
       admin: "%{service_name} administrasjonspanel"
