--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1226,6 +1226,7 @@ pt-BR:
     hero:
       search: ~
       signup: ~
+      search_placeholder: ~
   layouts:
     admin:
       admin: "Painel de administração do %{service_name}"
