--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -1195,6 +1195,7 @@ ro:
     hero:
       search: ~
       signup: ~
+      search_placeholder: ~
   layouts:
     admin:
       admin: "%{service_name} panou de administrare"
