--- a/config/locales/sk-SK.yml
+++ b/config/locales/sk-SK.yml
@@ -1195,6 +1195,7 @@ sk-SK:
     hero:
       search: ~
       signup: ~
+      search_placeholder: ~
   layouts:
     admin:
       admin: "%{service_name} panel administrátora"
