--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -1228,6 +1228,7 @@ sv:
     hero:
       search: ~
       signup: ~
+      search_placeholder: ~
   layouts:
     admin:
       admin: "%{service_name} admin panel"
