--- a/config/locales/tr-TR.yml
+++ b/config/locales/tr-TR.yml
@@ -1211,6 +1211,7 @@ tr-TR:
     hero:
       search: ~
       signup: ~
+      search_placeholder: ~
   layouts:
     admin:
       admin: "%{service_name} yönetici paneli"
