--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -1195,6 +1195,7 @@ vi:
     hero:
       search: ~
       signup: ~
+      search_placeholder: ~
   layouts:
     admin:
       admin: "ban quản trị %{service_name}"
