--- a/config/locales/devise.da-DK.yml
+++ b/config/locales/devise.da-DK.yml
@@ -22,7 +22,7 @@ da-DK:
       updated_not_active: "Din adgangskode er nu ændret."
       send_paranoid_instructions: "Hvis din e-mail findes i vores system, vil du modtage et link til genoprettelse af adgangskoden."
       send_instructions: "Om få minutter vil du modtage en email vedrørende nulstilling af din adgangskode."
-      updated: "Din adgangskode er ændret og du er nu logget ind."
+      updated: "Din adgangskode er blevet ændret. Du er nu logget ind."
     sessions:
       signed_in: "Du er nu logget ind"
       signed_out: "Du er nu logget ud."
@@ -53,6 +53,6 @@ da-DK:
       confirmation_instructions:
         subject: Bekræftelsesinstruktioner
       reset_password_instructions:
-        subject: "Sådan nulstiller du din adgangskode"
+        subject: "Nulstil adgangskode"
       unlock_instructions:
         subject: "Aktiver instruktioner"
