--- a/config/locales/id.yml
+++ b/config/locales/id.yml
@@ -1195,6 +1195,7 @@ id:
     hero:
       search: ~
       signup: ~
+      search_placeholder: ~
   layouts:
     admin:
       admin: "%{service_name} admin panel"
