--- a/config/locales/is.yml
+++ b/config/locales/is.yml
@@ -1195,6 +1195,7 @@ is:
     hero:
       search: ~
       signup: ~
+      search_placeholder: ~
   layouts:
     admin:
       admin: "%{service_name} Stjórnborð"
