--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1209,6 +1209,7 @@ ja:
     hero:
       search: ~
       signup: ~
+      search_placeholder: ~
   layouts:
     admin:
       admin: "%{service_name}のサイト管理パネル"
