--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -1215,6 +1215,7 @@ zh:
     hero:
       search: ~
       signup: ~
+      search_placeholder: ~
   layouts:
     admin:
       admin: "%{service_name}控制面板"
