WTI pull [skip ci]

--- a/config/locales/da-DK.yml
+++ b/config/locales/da-DK.yml
@@ -1222,7 +1222,7 @@ da-DK:
     hero:
       search: Søg
       signup: Tilmeld
-      search_placeholder: ~
+      search_placeholder: "Hvad leder du efter?"
   layouts:
     admin:
       admin: "%{service_name} administrator panel"
