--- a/config/locales/el.yml
+++ b/config/locales/el.yml
@@ -1195,6 +1195,7 @@ el:
     hero:
       search: ~
       signup: ~
+      search_placeholder: ~
   layouts:
     admin:
       admin: "Διαχείριση του %{service_name}"
