--- a/config/locales/es-ES.yml
+++ b/config/locales/es-ES.yml
@@ -1224,6 +1224,7 @@ es-ES:
     hero:
       search: ~
       signup: ~
+      search_placeholder: ~
   layouts:
     admin:
       admin: "Panel de administración de %{service_name}"
