--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1202,6 +1202,7 @@ es:
     hero:
       search: ~
       signup: ~
+      search_placeholder: ~
   layouts:
     admin:
       admin: "Panel de administración de %{service_name}"
