--- a/config/locales/fi.yml
+++ b/config/locales/fi.yml
@@ -1226,6 +1226,7 @@ fi:
     hero:
       search: ~
       signup: ~
+      search_placeholder: ~
   layouts:
     admin:
       admin: "%{service_name} ylläpitonäkymä"
