--- a/config/locales/nb.yml
+++ b/config/locales/nb.yml
@@ -1228,7 +1228,7 @@ nb:
     hero:
       search: Søk
       signup: "Registrer deg"
-      search_placeholder: ~
+      search_placeholder: "Hva ser du etter?"
   layouts:
     admin:
       admin: "%{service_name} administrasjonspanel"
