--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1220,6 +1220,7 @@ ru:
     hero:
       search: ~
       signup: ~
+      search_placeholder: ~
   layouts:
     admin:
       admin: "Администрирование %{service_name}"
