--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -1210,6 +1210,7 @@ nl:
     hero:
       search: ~
       signup: ~
+      search_placeholder: ~
   layouts:
     admin:
       admin: "%{service_name} dashboard beheerder"
