--- a/app/assets/javascripts/locales/ka.json
+++ b/app/assets/javascripts/locales/ka.json
@@ -1,28 +1,28 @@
 {
-  "please_wait": "Please wait...",
+  "please_wait": "გთხოვთ დაიცადეთ",
   "validation_messages": {
-    "accept": "The image file must be either in GIF, JPG or PNG format.",
-    "creditcard": "Please enter a valid credit card number.",
-    "date": "Please enter a valid date.",
-    "dateISO": "Please enter a valid date (ISO).",
-    "digits": "Please enter only digits.",
-    "email": "Please enter a valid email address.",
-    "equalTo": "Please enter the same value again.",
-    "max": "Please enter a value less than or equal to {0}.",
-    "maxlength": "Please enter no more than {0} characters.",
-    "min": "Please enter a value greater than or equal to {0}.",
-    "minlength": "Please enter at least {0} characters.",
-    "number": "Please enter a valid number.",
-    "range": "Please enter a value between {0} and {1}.",
-    "rangelength": "Please enter a value between {0} and {1} characters long.",
-    "remote": "Please fix this field.",
-    "required": "This field is required.",
-    "url": "Please enter a valid URL.",
-    "address_validator": "The location was not found.",
-    "money": "You need to insert a valid monetary value.",
-    "min_bound": "Please enter a value less than max value ({0})",
-    "max_bound": "Please enter a value more than min value ({0})",
-    "number_no_decimals": "Please enter a whole number",
-    "number_decimals": "Please enter a valid number with either dot (.) or comma (,) as a decimal separator"
+    "accept": "სურათი უნდა იყოს შემდეგ ფორმატებში მოცემული: GIF, JPG ან PNG.",
+    "creditcard": "გთხოვთ შეიყვანოთ აქტიური საკრედიტო ბარათის ნომერი",
+    "date": "გთხოვთ შეიყვანოთ თარიღი სწორად",
+    "dateISO": "გთხოვთ შეიყვანოთ თარიღი სწორად (ISO).",
+    "digits": "აქ უნდა ჩაწეროთ მხოლოდ ციფრები",
+    "email": "გთხოვთ შეიყვანოთ აქტიური ელ.ფოსტის მისამართი.",
+    "equalTo": "გთხოვთ გაიმეოროთ იგივე მონაცემები",
+    "max": "გთხოვთ შეიყვანოთ ერთზე ნაკლები ან ტოლი მნიშვნელობა {0}.",
+    "maxlength": "გთხოვთ შეიყვანოთ არაუმეტეს {0} სიმბოლო.",
+    "min": "გთხოვთ შეიყვანოთ {0}ზე მეტი ან ტოლი მნიშვნელობა.",
+    "minlength": "გთხოვთ შეიყვანოთ ყველაზე მცირე {0} სიმბოლო.",
+    "number": "გთხოვთ შეიყვანოთ სწორი ციფრი.",
+    "range": "გთხოვთ შეიყვანოთ {0}სა და {1}ს შორის მნიშვნელობა",
+    "rangelength": "გთხოვთ შეიყვანეთ მნიშვნელობა რომელიც {0} და {1} ის სიგრძის ტოლი იქნება.",
+    "remote": "გთხოვთ გაასწოროთ მონაცემები ამ ველში.",
+    "required": "ეს ველი აუცილებლად უნდა შეავსოთ.",
+    "url": "გთხოვთ შეიყვანოთ სწორი მისამართი.",
+    "address_validator": "მდებარეობა ვერ მოიძებნა.",
+    "money": "ითხოვს სწორი თანხის შეყვანას",
+    "min_bound": "გთხოვთ შეიყვანოთ მაქსიმალურ ღირებულებაზე ნაკლები ღირებულება ({0})",
+    "max_bound": "მინიმალურ ღირებულებაზე მეტი ღირებულება შეიყვანეთ ({0})",
+    "number_no_decimals": "გთხოვთ ჩაწეროთ მთელი რიცხვი",
+    "number_decimals": "გთხოვთ შეიყვანოთ არსებული ნომერი წერტილით (.) ან მძიმით (,) გამოყოფილი"
   }
 }
