--- a/config/locales/devise.ka.yml
+++ b/config/locales/devise.ka.yml
@@ -3,7 +3,7 @@ ka:
     messages:
       expired: "ვადა გაუვიდა, გთხოვთ მოითხოვოთ ახალი"
       not_found: "ვერ მოიძებნა"
-      already_confirmed: "უკვე დადასტურდა, გთხოვთ ცადოთ სისტემაში შესვლა"
+      already_confirmed: "უკვე დადასტურდა, გთხოვთ სცადოთ სისტემაში შესვლა"
       not_locked: "არ იყო დაბლოკილი"
       not_saved:
         other: "%{count} შეცდომის გამო ვერ მოხდა %{resource} ის შენახვა"
@@ -19,25 +19,25 @@ ka:
       inactive: "თქვენი ანგარიში ჯერ არ გააქტიურებულა."
     passwords:
       updated_not_active: "პაროლი წარმატებით შეიცვალა."
-      send_paranoid_instructions: "თუ თქვენი ელ. ფოსტა არსებობს მონაცემთა ბაზაში, თქვენ მიიღებთ პაროლის გასაახლებელ ლინკს თქვენ ელ. ფოსტაზე"
+      send_paranoid_instructions: "თუ თქვენი ელ. ფოსტა არსებობს მონაცემთა ბაზაში, თქვენ მიიღებთ პაროლის გასაახლებელ ლინკს თქვენს ელ. ფოსტაზე"
       send_instructions: "თქვენ ელ. ფოსტაზე რამოდენიმე წუთში მიიღებთ ინსტრუქციას, თუ როგორ უნდა შეცვალოთ პაროლი"
       updated: "პაროლი წარმატებით შეიცვალა. თქვენ ახლა სისტემაში იმყოფებით."
     sessions:
-      signed_in: "შესვლა წარამტებულია."
+      signed_in: "შესვლა წარმატებულია."
       signed_out: "წარმატებით გამოხვედით"
     confirmations:
       send_paranoid_instructions: "თუ თქვენი ელ. ფოსტა არსებობს ჩვენს მონაცემთა ბაზაში, რამოდენიმე წუთში მიიღებთ ინსტრუქციას ელ. ფოსტაზე იმის შესახებ, თუ როგორ დადადასტუროთ თქვენი ანგარიში. "
       send_instructions: "თქვენ რამდენიმე წუთში მიიღებთ ინსტრუქციას ელ. ფოსტაზე იმის შესახებ, თუ როგორ უნდა დაადასტუროთ თქვენი ანგარიში"
-      confirmed: "თქვენი ანგარიში წარამტებით დადასტურდა."
+      confirmed: "თქვენი ანგარიში წარმატებით დადასტურდა."
     registrations:
-      signed_up_but_unconfirmed: "შეტყობინება დადასტურების ბმულით უკვე გამოიგზავნა თქვენს ელ. ფოსტაზე. გთხოვთ გახსნათ ბმული რომ გაააქტიუროთ თქვენი ანგარიში"
-      signed_up_but_inactive: "თქვენ წამრატებით დარეგისტრირდით. მაგრამ სისტემაში ვერ შეხვალთ, რადგან თქვენი ანგარიში ჯერ არ არის გააქტიურებული. "
+      signed_up_but_unconfirmed: "შეტყობინება დასტურის ბმულით უკვე გამოიგზავნა თქვენს ელ. ფოსტაზე. გთხოვთ გახსნათ ბმული რომ გაააქტიუროთ თქვენი ანგარიში."
+      signed_up_but_inactive: "თქვენ წარმატებით დარეგისტრირდით. მაგრამ სისტემაში ვერ შეხვალთ, რადგან თქვენი ანგარიში ჯერ არ არის გააქტიურებული."
       signed_up_but_locked: "თქვენ წარამტებით დარეგისტრირდით. თუმცა სისტემაში ვერ შეხვალთ, რადგან თქვენი ანგარიში დაბლოკილია"
       reasons:
         inactive: "არაა აქტიური"
         unconfirmed: დაუდასტურებელია
         locked: დაბლოკილია
-      update_needs_confirmation: "თქვენ განაახლეთ თქვენი ანგარიში წამრატებით, მაგრამ ჩვენ უნდა გადავამოწმოთ თქვენი ახალი ელ. ფოსტა. გთხოვთ შეამოწმოთ ელ. ფოსტა და დააჭიროთ დადასტურების ბმულს, რომ დაასრულოთ თქვენი ახალი ანგარიშის დადასტურება."
+      update_needs_confirmation: "თქვენ განაახლეთ თქვენი ანგარიში წარმატებით, მაგრამ ჩვენ უნდა გადავამოწმოთ თქვენი ახალი ელ. ფოსტა. გთხოვთ შეამოწმოთ ელ. ფოსტა და დააჭიროთ დადასტურების ბმულს, ეს იმისთვის რათა დაასრულოთ თქვენი ახალი ანგარიშის დადასტურების პროცედურა."
       signed_up: "მოგესალმებით! თქვენ წარმატებით დარეგისტრირდით."
       updated: "თქვენი ანგარიში წარმატებით განახლდა."
       destroyed: "ნახვამდის! ანგარიში წარმატებით გაუქმდა. ვიმედოვნებთ რომ მალე კვლავ გნახავთ."
@@ -47,7 +47,7 @@ ka:
       unlocked: "თქვენი ანგარიში წარმატებით განიბლოკა. გთხოვთ შედით სისტემაში რომ გააგრძელოთ. "
     omniauth_callbacks:
       success: "წარმატებით მოხდა ავტორიზაცია %{kind} ანგარიშიდან."
-      failure: ~
+      failure: "ვერ ხერხდება თქვენთვის ავტორიზაციის მიცემა %{kind}ზე %{reason}-ის გამო"
     mailer:
       confirmation_instructions:
         subject: "დადასტურების ინსტრუქციები"
