--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -2162,7 +2162,7 @@ fr:
     days: jours
   web:
     topbar:
-      menu: ~
+      menu: Menu
       search_placeholder: Rechercher...
   will_paginate:
     models:
