--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -2131,7 +2131,7 @@ it:
     days: giorni
   web:
     topbar:
-      menu: ~
+      menu: Menù
       search_placeholder: Cerca...
   will_paginate:
     models:
