--- a/config/locales/nb.yml
+++ b/config/locales/nb.yml
@@ -2164,7 +2164,7 @@ nb:
     days: dager
   web:
     topbar:
-      menu: ~
+      menu: Meny
       search_placeholder: Søk...
   will_paginate:
     models:
