--- a/config/locales/da-DK.yml
+++ b/config/locales/da-DK.yml
@@ -2158,7 +2158,7 @@ da-DK:
     days: dage
   web:
     topbar:
-      menu: ~
+      menu: Menu
       search_placeholder: Søg...
   will_paginate:
     models:
