Topbar mobile menu

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2164,6 +2164,12 @@ en:
     topbar:
       menu: Menu
       search_placeholder: Search...
+      user: User
+      inbox: Inbox
+      profile: Profile
+      manage_listings: "Manage listings"
+      settings: Settings
+      logout: Log out
   will_paginate:
     models:
       person:
