WTI pull [skip ci]

--- a/config/locales/da-DK.yml
+++ b/config/locales/da-DK.yml
@@ -2160,6 +2160,12 @@ da-DK:
     topbar:
       menu: Menu
       search_placeholder: Søg...
+      user: ~
+      inbox: ~
+      profile: ~
+      manage_listings: ~
+      settings: ~
+      logout: ~
   will_paginate:
     models:
       person:
