--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -2164,6 +2164,12 @@ de:
     topbar:
       menu: ~
       search_placeholder: "Suche ..."
+      user: ~
+      inbox: ~
+      profile: ~
+      manage_listings: ~
+      settings: ~
+      logout: ~
   will_paginate:
     models:
       person:
