--- a/config/locales/el.yml
+++ b/config/locales/el.yml
@@ -2116,6 +2116,12 @@ el:
     topbar:
       menu: ~
       search_placeholder: ~
+      user: ~
+      inbox: ~
+      profile: ~
+      manage_listings: ~
+      settings: ~
+      logout: ~
   will_paginate:
     previous_label: ~
     next_label: ~
