--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2169,7 +2169,7 @@ en:
       profile: Profile
       manage_listings: "Manage listings"
       settings: Settings
-      logout: Log out
+      logout: "Log out"
   will_paginate:
     models:
       person:
