--- a/config/locales/fi.yml
+++ b/config/locales/fi.yml
@@ -2164,6 +2164,12 @@ fi:
     topbar:
       menu: ~
       search_placeholder: ~
+      user: ~
+      inbox: ~
+      profile: ~
+      manage_listings: ~
+      settings: ~
+      logout: ~
   will_paginate:
     models:
       person:
