--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -2164,6 +2164,12 @@ fr:
     topbar:
       menu: Menu
       search_placeholder: Rechercher...
+      user: ~
+      inbox: ~
+      profile: ~
+      manage_listings: ~
+      settings: ~
+      logout: ~
   will_paginate:
     models:
       person:
