--- a/config/locales/hu.yml
+++ b/config/locales/hu.yml
@@ -2121,6 +2121,12 @@ hu:
     topbar:
       menu: ~
       search_placeholder: ~
+      user: ~
+      inbox: ~
+      profile: ~
+      manage_listings: ~
+      settings: ~
+      logout: ~
   will_paginate:
     models:
       person:
