--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2128,6 +2128,12 @@ ja:
     topbar:
       menu: ~
       search_placeholder: ~
+      user: ~
+      inbox: ~
+      profile: ~
+      manage_listings: ~
+      settings: ~
+      logout: ~
   will_paginate:
     models:
       person:
