--- a/config/locales/km-KH.yml
+++ b/config/locales/km-KH.yml
@@ -2110,6 +2110,12 @@ km-KH:
     topbar:
       menu: ~
       search_placeholder: ~
+      user: ~
+      inbox: ~
+      profile: ~
+      manage_listings: ~
+      settings: ~
+      logout: ~
   will_paginate:
     previous_label: ~
     next_label: ~
