--- a/config/locales/nb.yml
+++ b/config/locales/nb.yml
@@ -2166,6 +2166,12 @@ nb:
     topbar:
       menu: Meny
       search_placeholder: Søk...
+      user: ~
+      inbox: ~
+      profile: ~
+      manage_listings: ~
+      settings: ~
+      logout: ~
   will_paginate:
     models:
       person:
