--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -2131,6 +2131,12 @@ nl:
     topbar:
       menu: ~
       search_placeholder: ~
+      user: ~
+      inbox: ~
+      profile: ~
+      manage_listings: ~
+      settings: ~
+      logout: ~
   will_paginate:
     models:
       person:
