--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -2166,6 +2166,12 @@ pt-BR:
     topbar:
       menu: Menu
       search_placeholder: Busca...
+      user: ~
+      inbox: ~
+      profile: ~
+      manage_listings: ~
+      settings: ~
+      logout: ~
   will_paginate:
     models:
       person:
