--- a/config/locales/pt-PT.yml
+++ b/config/locales/pt-PT.yml
@@ -2110,6 +2110,12 @@ pt-PT:
     topbar:
       menu: ~
       search_placeholder: ~
+      user: ~
+      inbox: ~
+      profile: ~
+      manage_listings: ~
+      settings: ~
+      logout: ~
   will_paginate:
     models:
       person:
