--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -2145,6 +2145,12 @@ ru:
     topbar:
       menu: ~
       search_placeholder: ~
+      user: ~
+      inbox: ~
+      profile: ~
+      manage_listings: ~
+      settings: ~
+      logout: ~
   will_paginate:
     models:
       person:
