--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -2162,6 +2162,12 @@ sv:
     topbar:
       menu: ~
       search_placeholder: ~
+      user: ~
+      inbox: ~
+      profile: ~
+      manage_listings: ~
+      settings: ~
+      logout: ~
   will_paginate:
     models:
       person:
