--- a/config/locales/tr-TR.yml
+++ b/config/locales/tr-TR.yml
@@ -2130,6 +2130,12 @@ tr-TR:
     topbar:
       menu: ~
       search_placeholder: ~
+      user: ~
+      inbox: ~
+      profile: ~
+      manage_listings: ~
+      settings: ~
+      logout: ~
   will_paginate:
     models:
       person:
