--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -2143,6 +2143,12 @@ zh:
     topbar:
       menu: ~
       search_placeholder: ~
+      user: ~
+      inbox: ~
+      profile: ~
+      manage_listings: ~
+      settings: ~
+      logout: ~
   will_paginate:
     models:
       person:
