--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -2175,6 +2175,12 @@ cs:
     topbar:
       menu: ~
       search_placeholder: ~
+      user: ~
+      inbox: ~
+      profile: ~
+      manage_listings: ~
+      settings: ~
+      logout: ~
   will_paginate:
     models:
       person:
