--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -2123,6 +2123,12 @@ es:
     topbar:
       menu: ~
       search_placeholder: ~
+      user: ~
+      inbox: ~
+      profile: ~
+      manage_listings: ~
+      settings: ~
+      logout: ~
   will_paginate:
     previous_label: ~
     next_label: ~
