--- a/config/locales/fr-CA.yml
+++ b/config/locales/fr-CA.yml
@@ -2135,6 +2135,12 @@ fr-CA:
     topbar:
       menu: ~
       search_placeholder: ~
+      user: ~
+      inbox: ~
+      profile: ~
+      manage_listings: ~
+      settings: ~
+      logout: ~
   will_paginate:
     models:
       person:
