--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -2112,6 +2112,12 @@ vi:
     topbar:
       menu: ~
       search_placeholder: ~
+      user: ~
+      inbox: ~
+      profile: ~
+      manage_listings: ~
+      settings: ~
+      logout: ~
   will_paginate:
     previous_label: ~
     next_label: ~
